@startuml

title __DOMAIN's Class Diagram__\n

  namespace domain {
    class domain.Estudiante {
        - edad : int
        - id : String
        - nombre : String
        - grado
        - materiasMatriculadas : Set<MateriaMatriculada>
    }
  }


  namespace domain {
    enum Grado {
      DECIMO
      NOVENO
      ONCE
    }
  }
  

  namespace domain {
    class domain.Materia {
        - codigo : String
        - nombre : String
    }
  }
  

  namespace domain {
    class domain.MateriaMatriculada {
        - materia : Materia
        - nota : BigDecimal
    }
  }
  

  domain.MateriaMatriculada o-- domain.Materia : materia
  domain.Estudiante *-- domain.MateriaMatriculada : materiasMatriculadas
  domain.Estudiante *-- domain.Grado : grado


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
